--- a/index2.css
+++ b/index2.css
@@ -5,8 +5,8 @@ body{
 .container{
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: [col1-start] 100px [col2-start] 100px [col3-start] 100px [col3-end];
-    grid-template-rows: [row1-start] auto [row2-start] auto [row2-end];
+    grid-template-columns: repeat(4, [col] 100px);
+    grid-template-rows: repeat(3, [row] auto);
     background-color: blue;
     color: #444;
 }
@@ -20,20 +20,25 @@ body{
 }
 
 .box-a{
-    grid-column: col1-start/ col3-start;
-    grid-row: row1-start;
+    grid-column: col / span 2;
+    grid-row: row;
 }
 
 .box-b{
-    grid-column: col3-start;
-    grid-row: row1-start/ row3-start;
+    grid-column: col 3 / span 2;
+    grid-row: row;
 }
 
 .box-c{
-    grid-column: col1-start;
-    grid-row: row2-start;
+    grid-column: col;
+    grid-row: row 2;
 }
 .box-d{
-    grid-column: col2-start;
-    grid-row: row2-start;
+    grid-column: col 2 / span 3;
+    grid-row: row 2;
+}
+
+.box-e{
+    grid-column: col / span 4;
+    grid-row: row 3;
 }
